fix(ui): add padding to prevent pagination overlap

--- a/frontend/src/container/MetricsExplorer/Summary/Summary.styles.scss
+++ b/frontend/src/container/MetricsExplorer/Summary/Summary.styles.scss
@@ -58,6 +58,8 @@
 	}
 
 	.metrics-table-container {
+		padding-bottom: 80px;
+
 		.ant-table {
 			margin-left: -16px;
 			margin-right: -16px;
